--- a/index.html
+++ b/index.html
@@ -7,18 +7,27 @@
 
 </head>
 <body>
-	<div ng-view></div>
 
-	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-	<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-	<script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
-	
-	<script type="text/javascript" src="-message.js"></script>
-	<!--<script type="text/javascript" src="-message.min.js"></script>-->
-	
-	<script type="text/javascript" src="app.js"></script>
-	
-	<script type="text/javascript" src="pages/home/HomeCtrl.js"></script>
+  <div ng-controller='HomeCtrl as vm'>
+    <h3>Received message:</h3>
+    <pre>{{ vm.message }}</pre>
+
+    <button ng-click="vm.sayHello()">Say Hello!</button>
+  </div>
+
+  <iframe ng-src="/index-inside.html" height="300" width="700" name="inside"></iframe>
+
+  <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+  <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
+  <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
+  
+  <script type="text/javascript" src="-post-message.js"></script>
+  <!--<script type="text/javascript" src="-message.min.js"></script>-->
+  
+  <script type="text/javascript" src="app.js"></script>
+  
+  <script type="text/javascript" src="pages/home/HomeCtrl.js"></script>
 </body>
 </html>
