gh-pages config

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button ng-click="vm.sayHello()">Say Hello!</button>
   </div>
 
-  <iframe ng-src="/index-inside.html" height="300" width="700" name="inside"></iframe>
+  <iframe ng-src="/ng-post-message/index-inside.html" height="300" width="700" name="inside"></iframe>
 
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
