--- a/index-inside.html
+++ b/index-inside.html
@@ -18,7 +18,7 @@
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
   
-  <script type="text/javascript" src="-post-message.js"></script>
+  <script type="text/javascript" src="post-message.js"></script>
   <!--<script type="text/javascript" src="-message.min.js"></script>-->
   
   <script type="text/javascript" src="app-inside.js"></script>
