--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script type="text/javascript" src="bower_components/angular-touch/angular-touch.min.js"></script>
   <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
   
-  <script type="text/javascript" src="-post-message.js"></script>
+  <script type="text/javascript" src="post-message.js"></script>
   <!--<script type="text/javascript" src="-message.min.js"></script>-->
   
   <script type="text/javascript" src="app.js"></script>
